--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 		<relativePath/> 
   </parent>
 
-  <groupId>vsphereCloud</groupId>
-  <artifactId>VSphereCloud</artifactId>
+  <groupId>vsphereTools</groupId>
+  <artifactId>VSphereTools</artifactId>
   <version>0.2-SNAPSHOT</version>
   <packaging>hpi</packaging>
   
@@ -35,4 +35,17 @@
       <version>5.0.0</version>
      </dependency>
   </dependencies>
+  
+  <developers>
+    <developer>
+      <id>elordahl</id>
+      <name>Eric Lordahl</name>
+    </developer>
+  </developers>
+  <scm>
+    <connection>scm:git:ssh://github.com/jenkinsci/VSphereTools.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/jenkinsci/VSphereTools.git</developerConnection>
+    <url>https://github.com/jenkinsci/VSphereTools</url>
+  </scm>
+  
 </project>
